account_reports/static/src/scss/account_financial_report.scss
/* ... */
.o_form_view {
    .o_account_reports_no_print {
        div.o_account_reports_summary {
            cursor: pointer;
        }
        .o_account_reports_table {
            margin-bottom: 0px;
            tbody tr:not(.o_account_reports_level0):hover {
                background-color: #f0f0f0;
            }
        }
    }
}

.o_account-progress-bar-content {
    color: black;
    position: absolute;
    width: 100%;
}
.o_account-progress {
    position: relative;
}
.o_account_reports_history [summary="o_followup_letter_display_none"] {
    display: none;
}

.o_account_report_search {
    margin-left: 10px;
    margin-right: 10px;
    .o_account_report_select {
        min-width: 100px;
    }
}

// Filters lines
// -----------------------------------------
.o_reports_filter_input_wrapper {
    position: relative;
    float: right;
    width: 150px;
    margin-bottom: 20px;

    .searchIcon {
        position: absolute;
        right: 10px;
    }
}
    .o_account_reports_filter_input {
    border: none;
    border-bottom: 1px black solid;
}
    .o_account_reports_filtered_lines {
    display: none;
}

.o_account_reports_filter_journals {
    .dropdown-menu {
        overflow: auto;
        // 86.5px is the height of .o_control_panel
        max-height: calc(100vh - (86.5px + #{$o-navbar-height}));
    }
}

// Summary to be edited
// -----------------------------------------
.o_account_reports_body .o_account_reports_summary {
    display: inline-block;
    position: relative;

    .o_account_report_summary_placeholder{
        opacity: .5;
    }

    .o_account_report_summary {
        padding: 10px 0;

        &, > span, .o_input, .o_account_reports_edit_summary_pencil {
            transition: all .2s ease 0s;
        }
        > span {
            padding: 10px 0;
            display: block;
            line-height: 1;
        }
    }

    .o_input {
        border: none;
        padding: 10px;
    }

    .o_account_reports_edit_summary_pencil {
        @include o-position-absolute(20px, $left: 0);
        visibility: hidden;
        opacity: 0;
    }

    &:hover {
        .o_account_reports_edit_summary_pencil {
            visibility: visible;
            opacity: 1;
        }

        .o_account_report_summary .o_input, .o_account_report_summary span {
            padding-right: 0;
        }
    }
}

.o_account_reports_body {
    .alert a {
        cursor: pointer;
    }
}

.o_account_reports_summary_edit {
    padding-bottom: 25px;
    padding-top: 10px;

    textarea {
        border: 1px solid map-get($grays, '600');
        resize: vertical;
        width: 100%;
    }
}

.o_financial_report_hover_popup {
    color: orange;
}

// Print mode report summary
// -----------------------------------------
p.o_account_reports_contact_info {
    min-height: 30px;
}

.o_account_reports_load_more {
    span.account_report_line_name {
        cursor: pointer;
    }
}

.o_country_specific_report_label {
    margin-left: 16px;
    background-color: white;
    align-self: normal;
}

[class*='o_account_reports_filter'] {
    // TODO A more general fix might be warranted. The solution provided here
    // still entails some minor glitches.
    > .dropdown-menu {
        overflow-y: auto;
        max-height: calc(100vh - #{$o-navbar-height} - 100px);  // 100px for the control panel
    }
}

