[FIX] account_reports: wrong scroll display on res.partner form
This problem occurs because we previously change the default line-height
to 1.0 https://github.com/odoo/enterprise/commit/6317774e30066cadc789ad239e19549a0445fc03
so to solve this problem we remove some css weird rules

Steps to reproduce:

1. Go to Sale -> To Invoice -> Order To invoice
2. Open the order number "S00061"
3. Click on the customer "YourCompany, Joel Willis"
4. Lock at the chatter, the rendered mail as some weird scrollbar
   => bug

closes odoo/enterprise#31904

--- a/account_reports/static/src/scss/account_financial_report.scss
+++ b/account_reports/static/src/scss/account_financial_report.scss
@@ -612,11 +612,6 @@
         &, > span, .o_input, .o_account_reports_edit_summary_pencil {
             transition: all .2s ease 0s;
         }
-        > span {
-            padding: 10px 0;
-            display: block;
-            line-height: 1;
-        }
     }
 
     .o_input {
